
   * Structure.select() create subset consisting only of given member variables
   - Structure.convertXXX removed

   + VariableSimpleAdapter adapts a StructureMembers.Member into a VariableSimpleIF

  Package ucar.nc2.dataset
   * NetcdfDataset.EnhanceMode to control enhancing
   * StructureDS correctly gets enhanced
   * NetcdfDataset.makeArray -> Array.makeArray()

  Package ucar.nc2.iosp
   * Layouts and Chunkers factored out for reuse
     - IndexChunker, IndexChunkerTiled
     - LayoutRegular, LayoutRegularSegmented, LayoutSegmented, LayoutTIled, LayoutBBTiled
   * IOServiceProvider.readNestedData() not needed anymore. optimize readData(Structure struct),
      where struct has only a subset of member Variables
   + IOServiceProvider.readSection(secSpec) with default implementation in AbstractIOServiceProvider
   + IOServiceProvider.readData(ucar.nc2.Variable v2, Section section, WritableByteChannel channel)
     to allow use of nio.Channels

  Package ucar.nc2.iosp.netcdf3
    * netcdf3 format is now just one of the possible IOSPs
    * N3streamWriter allows netcdf3 to be written as a stream

  Package ucar.nc2.util
    * RuntimeConfigParser -> ucar.nc2.util.xml

  Package thredds.catalog
    * DataType -> ucar.nc2.constants.FeatureType

  Refactoring to reduce dependencies among modules (core, netcdf, ui, tds)
    * ucar.nc2.dataset.conv._Coordinate moved to ucar.nc2.constants
    * thredds.catalog.DataType moved to ucar.nc2.constants
    * ucar.nc2.dataset.AxisType moved to ucar.nc2.constants

    * thredds.util.DateFromString moved to ucar.nc2.units
    * thredds.datatype to ucar.nc2.units

    * thredds.util to ucar.nc2.util
    * thredds.util.net to ucar.nc2.util.net
    * ucar.nc2.dataset.HttpClientManager to ucar.nc2.util.net
    * remove opendap.dap.DConnect2, ucar.unidata.io.http.HTTPRandomAccessFile from HttpClientManager: must be done seperately
    * ucar.nc2.util.NetworkUtils to ucar.nc2.util.net.URLnaming
