@@ -269,115 +269,7 @@ public class NetcdfDatasetInfo {
     return " ";
   }
 
-  /* public void writeXML2( java.io.OutputStream os) {
-    StringBuffer sb = new StringBuffer();
-
-    PrintStream out = new PrintStream( os);
-    out.print("<?xml version='1.0' encoding='UTF-8'?>\n");
-    out.print("<netcdfDataset location='"+q(ds.getLocation())+"' >\n");
-    if (coordSysBuilderName != null)
-      out.print("  <convention name='"+q(coordSysBuilderName)+"'/>\n");
-    out.print("\n");
-
-    List axes = ds.getCoordinateAxes();
-    for (int i = 0; i < axes.size(); i++) {
-      CoordinateAxis axis =  (CoordinateAxis) axes.get(i);
-      sb.setLength(0);
-      sb.append(axis.getDataType().toString());
-      sb.append(" ");
-      axis.getNameAndDimensions(sb, true, true);
-      out.print("  <axis name='"+q(sb.toString())+"' ");
-      if (axis.getAxisType() != null)
-        out.print("type='"+axis.getAxisType()+"' ");
-      if (axis.getUnitsString() != null) {
-        out.print("units='"+q(axis.getUnitsString())+"' ");
-        out.print("udunits='"+isUdunits(axis.getUnitsString())+"' ");
-      }
-      out.print("/>\n");
-    }
-    out.print("\n");
-
-    int count = 0;
-    List coordTransforms = ds.getCoordinateTransforms();
-    for (int i = 0; i < coordTransforms.size(); i++) {
-      CoordinateTransform ct =  (CoordinateTransform) coordTransforms.get(i);
-      out.print("  <transform name='"+q(ct.getName())+"' ");
-      out.print(" type='"+q(ct.getTransformType().toString())+"' >\n");
-      List params = ct.getParameters();
-      for (int j = 0; j < params.size(); j++) {
-        Parameter pp = (Parameter) params.get(j);
-        out.print("    <param type='"+q(pp.getName())+"' value='"+pp.getStringValue()+"' />\n");
-      }
-      out.print("  </transform>\n");
-      count++;
-    }
-    if (count > 0) out.print("\n");
-
-    count = 0;
-    List vars = ds.getVariables();
-    for (int i = 0; i < vars.size(); i++) {
-      VariableEnhanced v =  (VariableEnhanced) vars.get(i);
-      if (v instanceof CoordinateAxis) continue;
-      GridCoordSys gcs = getGridCoordSys(v);
-      if (null != gcs) {
-        doVar(v, "grid", gcs, out);
-        count++;
-      }
-    }
-    if (count > 0) out.print("\n");
-
-    count = 0;
-    for (int i = 0; i < vars.size(); i++) {
-      VariableEnhanced v =  (VariableEnhanced) vars.get(i);
-      if (v instanceof CoordinateAxis) continue;
-      if (null == getGridCoordSys(v)) {
-        doVar(v, "variable", null, out);
-        count++;
-      }
-    }
-    if (count > 0) out.print("\n");
-
-    if (parseInfo != null) {
-      out.print("  <parseInfo>\n");
-      out.print(parseInfo);
-      out.print("  </parseInfo>\n");
-    }
-
-    out.print("</netcdfDataset>\n");
-    out.flush();
-  }
-
-
-  private void doVar( VariableEnhanced ve, String elementName, CoordinateSystem cs, PrintStream out) {
-    StringBuffer sb = new StringBuffer();
-    sb.setLength(0);
-    sb.append(ve.getDataType().toString());
-    sb.append(" ");
-    ve.getNameAndDimensions(sb, true, true);
-    out.print("  <"+elementName+" name='"+q(sb.toString())+"' ");
-    if (ve.getUnitsString() != null) {
-      out.print("units='"+q(ve.getUnitsString())+"' ");
-      out.print("udunits='"+isUdunits(ve.getUnitsString())+"' ");
-    }
-    if (cs != null)
-      out.print("coordSys='"+q(cs.getName())+"' ");
-    else {
-      List csList = ve.getCoordinateSystems();
-      if (csList.size() == 1) {
-        cs = (CoordinateSystem) csList.get(0);
-        out.print("coordSys='"+q(cs.getName())+"' ");
-      } else if (csList.size() > 1) {
-        out.print("/>\n");
-      }
-    }
-    out.print("/>\n");
-  }
-
-  private String q(String s) {
-    return StringUtil.quoteXmlAttribute(s);
-  } */
-
-  private String isUdunits(String unit) {
+ private String isUdunits(String unit) {
     SimpleUnit su = SimpleUnit.factory(unit);
     if (null == su) return "false";
     if (su instanceof DateUnit) return "date";
