@@ -51,7 +51,7 @@ or <a href="http://www.unidata.ucar.edu/mailing_lists/archives/netcdf-java/">bro
   <li><a href="v2.2.22/javadocAll/index.html">All javadoc: </a>Javadoc for all packages and all methods except private. CAREFUL, some of this may change.</li>
 </ul>
 <h3><strong>Development version 4.0 (requires Java 1.5+) </strong></h3>
-<p><strong>This version is ALPHA, do not rely on its API until announced as BETA.</strong></p>
+<p><strong>This version is ALPHA, do not rely on its API until announced as BETA. </strong></p>
 <ul>
   <li> The <a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/ncCore-4.0.jar">minimal library</a> (<a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/ncCore-4.0.jar.MD5">MD5</a>) just reads netcdf-3 (eventually netcdf-4) files.</li>
   <li>The <a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/netcdf-4.0.jar">netCDF library</a> (<a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/netcdf-4.0.jar.MD5">MD5</a>) implements the full CDM model. </li>
@@ -66,6 +66,7 @@ or <a href="http://www.unidata.ucar.edu/mailing_lists/archives/netcdf-java/">bro
 <ul>
   <li> <a href="v4.0/javadoc/index.html">Public javadoc</a>: This is the public interface. Downloadable <a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/javadoc-4.0.jar">jar file</a>. </li>
   <li><a href="v4.0/javadocAll/index.html">All javadoc: </a>Javadoc for all packages and all methods except private. Downloadable <a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/javadocAll-4.0.jar">jar file</a>. CAREFUL, some of this may change.</li>
+  <li><a href="transition4.html">Transitioning to version 4.0</a> </li>
 </ul>
 <h3><strong>Last Stable version 2.2.20 for Java 1.4.2+ </strong></h3>
 <ul>
@@ -167,7 +168,7 @@ or <a href="http://www.unidata.ucar.edu/mailing_lists/archives/netcdf-java/">bro
 <hr WIDTH="100%">
 <address>
 <a href="NetcdfUsers.htm"><img src="nc.gif" width="64" height="64" border="0"></a> This document is maintained by <a href="mailto:caron@unidata.ucar.edu">John Caron</a> 
-and was last updated on Apr 27, 2008 
+and was last updated on May 29, 2008 
 </address>
 
 </body>
